<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context="com.example.dashfoods.LoginPage">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo1"
            android:contentDescription="@string/logo"
            tools:ignore="ContentDescription" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/aclonica"
            android:text="WelcomeBack"
            android:textColor="@color/black"
            android:textSize="40sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_to_continue"
            android:textSize="18sp"
            android:fontFamily="@font/aclonica"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/username">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:endIconDrawable="@drawable/ic_launcher_foreground"
            tools:ignore="HardcodedText">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Forget"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/forget_password"
            android:layout_gravity="right"
            android:textColor="@color/black"
            android:elevation="0dp"
            android:layout_margin="5dp"
            tools:ignore="HardcodedText,RtlHardcoded" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go"
            android:background="#000"
            android:textColor="#fff"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <Button
            android:id="@+id/SignUp"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="New User? sign up"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:elevation="0dp"
            android:layout_margin="5dp"
            tools:ignore="HardcodedText" />


</LinearLayout>