<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".HomePage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/person"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/person"
            tools:layout_editor_absoluteX="363dp"
            tools:layout_editor_absoluteY="16dp"
            android:contentDescription="@string/notification"
            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0" />
        <ImageView
            android:id="@+id/notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/notification"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintVertical_bias="0"
            android:contentDescription="@string/person"
            android:layout_marginEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/person"
            app:layout_constraintEnd_toStartOf="@+id/person"/>
        <TextView
            android:id="@+id/hello_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello"
            android:textSize="36sp"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/notification"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:fontFamily="@font/aclonica"
            android:text="@string/fresh"
            android:textColor="@color/black"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toEndOf="@+id/hello_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/hello_text"
            app:layout_constraintVertical_bias="0.0"/>
        <EditText
            android:id="@+id/search_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/hello_text"
            app:layout_constraintTop_toBottomOf="@id/hello_text"
            android:hint="@string/search"
            android:textSize="14sp"
            android:paddingStart="20dp"
            android:background="@drawable/search_bg"
            app:layout_constraintVertical_bias="0"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintWidth_percent=".7"
            android:paddingTop="15dp"
            android:elevation="4dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            tools:ignore="RtlSymmetry"
            android:inputType="text" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/search"
            android:layout_marginStart="10dp"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias=".01"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/search_bar"
            app:layout_constraintTop_toTopOf="@id/search_bar"
            android:contentDescription="@string/search" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_bar"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_1"
            app:layout_constraintVertical_bias="0"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>






</ScrollView>